# unraid-cache-cleaner

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: implement-issue-gate.sh  precommit-gate.sh
.claude/skills/implement-issue/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/resolve-pr-threads/: SKILL.md
.github/workflows/: ci.yml  publish.yml
contrib/: unraid-cache-cleaner.xml
docs/: architecture.md  unraid.md
scripts/: diagnose-unraid.sh  fresh-check.sh  generate_changelog.py  inspect-mounts.sh  install-unraid-template.sh
src/unraid_cache_cleaner/: __init__.py  __main__.py  arr.py  cli.py  config.py  dedupe.py  extractor.py  hasher.py  http_client.py  http_redirect.py  models.py  planner.py  plex.py  plex_report.py  qbittorrent.py  scanner.py  service.py  state.py  web.py  web_actions.py  web_rescan.py
tests/: _fake_http.py  test_arr.py  test_cli.py  test_config.py  test_dedupe.py  test_extractor.py  test_generate_changelog.py  test_hasher.py  test_http_client.py  test_http_redirect.py  test_planner.py  test_plex.py  test_plex_report.py  test_publish_workflow.py  test_qbittorrent.py  test_release_permissions.py  test_service.py  test_state.py  test_version.py  test_web.py  test_web_actions.py  test_web_rescan.py
tests/fixtures/: README.md  hello.rar  make_rar_fixture.py  nested.rar
